fix alignment at navlink in dashboard, change profile name and email style

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -59,7 +59,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 10px;
+  gap: 15px;
   padding: 20px 0;
 }
 .sidebar__profile__account__avatar {
@@ -70,16 +70,9 @@ body {
   max-width: 150px;
   word-wrap: break-word;
 }
-.sidebar__profile__account__detail-name {
-  background-color: var(--main-color);
-  border-radius: 5px;
-  color: white;
-  padding: 5px;
-}
 .sidebar__profile__account__detail-email {
   font-size: 0.9rem;
-  font-weight: 300;
-  padding: 0 5px;
+  color: rgba(0, 0, 0, 0.8);
 }
 .sidebar__profile__menu {
   display: flex;
@@ -105,6 +98,7 @@ body {
 }
 .sidebar__menu__list ul li a {
   display: flex;
+  align-items: center;
   gap: 10px;
   padding: 10px;
   border-radius: 10px;
